# stdio-utils-rs

./: .rustfmt.toml  Cargo.toml  README.md  benchmark-awk.sh  benchmark-paste-bc.sh  benchmark-python.sh  benchmark-stdio-utils.sh  benchmark.sh  rustfmt.toml
.github/workflows/: quality-control-on-pull-request.yaml  quality-control-on-push.yaml
benches/: exhaustive_benchmark.rs  lib.rs  quick_comparison_against_other_solutions.rs
src/: lib.rs  main.rs
tools/: Cargo.toml
