[package]
name = "stdio-utils"
version = "0.1.0"
authors = ["Andreas Waidler <waidler@programmers.at>"]
edition = "2018"

[workspace]
members = [
    "tools",
]

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
path = "benches/quick_comparison_against_other_solutions.rs"
name = "quick_comparison_against_other_solutions"
harness = false # use criterion instead

[[bench]]
path = "benches/exhaustive_benchmark.rs"
name = "exhaustive_benchmark"
harness = false # use criterion instead
